<resources>
	<string name="app_name">SnoopSnitch</string>
    <string name="common_events">Events</string>
    <string name="common_silent_sms">Silent SMS</string>
    <string name="common_binary_sms">Binary SMS</string>
    <string name="common_imsi_catcher">IMSI Catcher</string>
    <string name="common_3g_title">3G</string>
    <string name="common_2g_title">2G</string>
    <string name="actionBar_title">SnoopSnitch</string>
    <string name="actionBar_subTitle">App ID:</string>
   	<string name="action_scan">Scan</string>
    <string name="action_map">Map</string>
    <string name="action_info">Info</string>
    <string name="action_upload_pending_files">Upload pending files</string>
    <string name="action_active_test_advanced">Active test (advanced mode)</string>
    <string name="action_upload_suspicious_dumps">Upload suspicious activity</string>
    <string name="action_upload_debug_logs">Submit feedback/questions</string>
    <string name="action_network_info">Network Info</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="common_button_upload">upload</string>
    <string name="common_button_nodata">No data</string>
    <string name="common_button_networktest_start">Start Test</string>
    <string name="common_button_networktest_stop">Stop Test</string>
    <string name="message_smsDetected">New SMS detected&#8230;</string>
    <string name="message_imsiCatcherDetected">New IMSI catcher detected&#8230;</string>
    <string name="message_recordingStarted">Recording started&#8230;</string>
    <string name="message_recordingStopped">Recording stopped&#8230;</string>
    <string name="alert_button_quit">Quit</string>
    <string name="alert_confirmation_title">Confirmation</string>
    <string name="alert_fatal_condition_title">Fatal Condition</string>
    <string name="alert_notification_title">Notification</string>
    <string name="alert_deviceCompatibility_title">Compatibility check failed</string>
<string name="alert_deviceCompatibility_header">Your device is not compatible.\n\nREASON:</string>
<string name="alert_deviceCompatibility_message">\n\nVisit the project website for details (https://opensource.srlabs.de/projects/snoopsnitch).</string>
<string name="alert_upload_message">
Thank you for contributing radio data related to this security event
and supporting SnoopSnitch research and development!\n
\n
Please send details about this incident to snoopsnitch@srlabs.de
(PGP fingerprint 9728 A7F9 D457 1FBB 746F  5381 D52C AC10 634A 9561).
Do not forget your App-ID and the time the event happened. Thank you!\n
\n
This upload is encrypted. Keep in mind that radio traces may contain
private data and location information.\n
</string>
<string name="alert_networktest_message">
The active network test collects security information about your current
mobile network by sending and receiving a number of SMS and by placing and
receiving a number of automatic calls.\n
\n
DO NOT PICK UP THE PHONE AND DO NOT REJECT THE CALL WHEN THE SERVER CALLS. IF
YOU DO SO, YOUR NUMBER WILL GET BLACKLISTED AND BANNED FROM OUR SERVICE.
\n
It is normal to receive error status SMS from your operator during that test.
The test should be free of charge. HOWEVER, YOUR OPERATOR MAY CHARGE YOU FOR
OUTGOING SMS EVEN IF SENT TO AN INVALID DESTINATION!\n
\n
YOU MUST ONLY ENTER YOUR OWN PHONE NUMBER IN THE NEXT DIALOG.\n
</string>
<string name="alert_networktest_privacy_disclaimer">
Following the test, the resulting radio data is uploaded to our servers
automatically. If you do not agree with this, press Cancel now and disable
recording for active tests in the settings menu. Note that radio traces may
contain private data and location information as a side effect.\n
</string>
<string name="alert_first_app_start_message">
Welcome! This is your first time running SnoopSnitch.\n
\n
READ THIS MESSAGE CAREFULLY BEFORE PROCEEDING!\n
\n
SnoopSnitch collects and analyzes mobile radio data to make you aware
of your mobile network security and to warn you about threats like fake base
stations (IMSI catchers), user tracking and over-the-air updates.\n
\n
This application uses data contributed by other users. By choosing to upload your
measurement results or security events, you can help improve this data base and
support future research.\n
\n
SnoopSnitch will ask for confirmation whenever any of your information is uploaded to
our servers. All uploads are encrypted. Note that uploaded radio traces may contain
private information as a side-effect.\n
\n
Raw radio data is stored encrypted on your phone. However, for the continuous security
analysis, SnoopSnitch needs to maintain data that may be used to reconstruct your movements
and possibly message contents. This information is cleaned regularly - make sure to
configure a cleanup interval that suits your needs.\n
\n
If SnoopSnitch\'s way of functioning concerns you, press Cancel now!
</string>
<string name="about_text">
SnoopSnitch collects and analyzes mobile radio data to make you aware
of your mobile network security and to warn you about threats like fake base
stations (IMSI catchers), user tracking and over-the-air updates.\n
\n
This application uses data contributed by other users. By choosing to upload your
measurement results or security events, you can help improve this data base and
support future research.\n
\n
SnoopSnitch will ask for confirmation whenever any of your information is uploaded to
our servers. All uploads are encrypted. Note that uploaded radio traces may contain
private information as a side-effect.\n
\n
If you have questions or want to contribute to SnoopSnitch, please send an email to
our mailing list https://lists.srlabs.de/cgi-bin/mailman/listinfo/gsmmap. For a
private conversion with the SnoopSnitch team, please contact snoopsnitch@srlabs.de
(PGP fingerprint 9728 A7F9 D457 1FBB 746F  5381 D52C AC10 634A 9561).\n
\n
Visit our  project website for source code and further information:\n
\n
https://opensource.srlabs.de/projects/snoopsnitch\n
</string>
    <string name="dashboard_lastanalysis">Last analysis: </string>
    <string name="dashboard_lastanalysis_time"></string>
    <string name="settings_basebandlogkeepduration_title">Baseband log clean interval</string>
    <string name="settings_basebandlogkeepduration_summary">Radio traces are purged from the phone that often</string>
    <string name="settings_basebandlogkeepduration_dialogtitle">Select interval:</string>
    <string name="settings_locationlogkeepduration_title">Location log clean interval</string>
    <string name="settings_locationlogkeepduration_summary">Information about your location is purged from the phone that often</string>
    <string name="settings_locationlogkeepduration_dialogtitle">Select interval:</string>
    <string name="settings_analysiskeepduration_title">Analysis data clean interval</string>
    <string name="settings_analysiskeepduration_summary">Data from catcher and event analysis is purged from the phone that often</string>
    <string name="settings_analysiskeepduration_dialogtitle">Select interval:</string>
    <string name="settings_debuglogkeepduration_title">Debug log clean interval</string>
    <string name="settings_debuglogkeepduration_summary">Debug logs are purged from the phone that often</string>
    <string name="settings_debuglogkeepduration_dialogtitle">Select interval:</string>
    <string name="settings_gpsrecording_title">Record GPS location</string>
    <string name="settings_gpsrecording_summary">Use fine-grained GPS-based location recording to get location information for IMSI catcher and security events</string>
    <string name="settings_networklocationrecording_title">Record network location</string>
    <string name="settings_networklocationrecording_summary">Use coarse-grained network-based location recording to get location information for IMSI catcher and security events</string>
    <string name="settings_unencryptedlogfilesrecording_title">Unencrypted log files</string>
    <string name="settings_unencryptedlogfilesrecording_summary">Record log files in plaintext. Sensitive information is NOT removed from the device for you!</string>
    <string name="settings_unencrypteddumpfilesrecording_title">Unencrypted radio data</string>
    <string name="settings_unencrypteddumpfilesrecording_summary">Record dump files in plaintext. Sensitive information is NOT removed from the device for you!</string>
    <string name="settings_applicationid_title">App ID</string>
    <string name="settings_applicationid_summary">Your can use your app ID to hint us at the files you uploaded. Refresh it anytime by tapping here.</string>
    <string name="settings_active_test_force_offline_title">Force offline test</string>
    <string name="settings_active_test_force_offline_summary">Force using offline mode in active test. No data connection is used in this case.</string>
    <string name="settings_active_test_sms_mo_disabled_title">Disable outgoing SMS</string>
    <string name="settings_active_test_sms_mo_disabled_summary">Sending SMS to an invalid destination can still cost money for some providers.</string>
    <string name="settings_active_test_sms_mo_number_title">Outgoing SMS number</string>
    <string name="settings_active_test_sms_mo_number_summary">Please enter a number to which you can send SMS for free. The default \"*4*\" is an invalid number and most providers don\'t charge for SMS sent to this number.</string>
    <string name="settings_active_test_num_iterations_title">Active test iterations</string>
    <string name="settings_active_test_num_iterations_dialogtitle">Number of iterations for each active test.</string>
    <string name="settings_active_test_disable_upload_title">Don\'t upload test results</string>
    <string name="settings_active_test_disable_upload_summary">Evaluate active test results on the phone only. No radio data is uploaded to our servers in this case.</string>
    <string name="settings_cat_location">Location Recording</string>
    <string name="settings_cat_cleanup">Log file cleanup</string>
    <string name="settings_cat_privacy">Privacy</string>
    <string name="settings_cat_active_test">Active test parameters</string>
     <string name="settings_cat_debugging">Development</string>
     <string name="settings_cat_debugging_summary">DO NOT ENABLE THIS, unless you are a SnoopSnitch developer!</string>
     <string name="settings_debugging_crash">Crash SnoopSnitch</string>
     <string name="settings_debugging_crash_summary">This will crash SnoopSnitch on next start and reset this option. Used for testing crash handling. Leave this off ;-)</string>
     <string name="settings_enable_devel_options">Enable development options</string>
     <string name="settings_debugging_dump_analysis_stacktraces">Analysis stack traces</string>
     <string name="settings_debugging_dump_analysis_stacktraces_summary">Periodically dump start traces of catcher, security metrics and event analysis</string>
     <string name="settings_debugging_parser_logging">Extended parser logging</string>
     <string name="settings_debugging_parser_logging_summary">Output additional state information, RAT changes and SQL statements from parser. Warning: This option will create a lot of logs!</string>
    <string name="debug_what_to_report">Please describe the problem you want to report:</string>
    <string name="debug_contact_info">Please enter your email address so that we can contact you:</string>
    <string name="debug_upload_snoopsnitch_debug_logs">Upload SnoopSnitch debug logs</string>
    <string name="debug_upload_radio_traces">Upload radio traces (past hour)</string>
    <string name="debug_upload_metadata">Upload database metadata</string>
    <string name="debug_upload">Upload</string>
    <string name="debug_cancel">Cancel</string>
</resources>