<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <PreferenceCategory
        android:key="cat_privacy"
        android:title="@string/settings_cat_privacy" >
        <Preference
            android:key="settings_appId"
            android:summary="@string/settings_applicationid_summary"
            android:title="@string/settings_applicationid_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_active_test_disable_upload"
            android:summary="@string/settings_active_test_disable_upload_summary"
            android:title="@string/settings_active_test_disable_upload_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_cleanup"
        android:title="@string/settings_cat_cleanup" >
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_basebandlogkeepduration_dialogtitle"
            android:entries="@array/settings_durations_entries"
            android:entryValues="@array/settings_durations_values"
            android:key="settings_basebandLogKeepDuration"
            android:summary="@string/settings_basebandlogkeepduration_summary"
            android:title="@string/settings_basebandlogkeepduration_title" />
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_locationlogkeepduration_dialogtitle"
            android:entries="@array/settings_durations_entries"
            android:entryValues="@array/settings_durations_values"
            android:key="settings_locationLogKeepDuration"
            android:summary="@string/settings_locationlogkeepduration_summary"
            android:title="@string/settings_locationlogkeepduration_title" />
        <ListPreference
            android:defaultValue="30"
            android:dialogTitle="@string/settings_analysiskeepduration_dialogtitle"
            android:entries="@array/settings_durations_entries"
            android:entryValues="@array/settings_durations_values"
            android:key="settings_analysisInfoKeepDuration"
            android:summary="@string/settings_analysiskeepduration_summary"
            android:title="@string/settings_analysiskeepduration_title" />
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_debuglogkeepduration_dialogtitle"
            android:entries="@array/settings_durations_entries"
            android:entryValues="@array/settings_durations_values"
            android:key="settings_debugLogKeepDuration"
            android:summary="@string/settings_debuglogkeepduration_summary"
            android:title="@string/settings_debuglogkeepduration_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_location"
        android:title="@string/settings_cat_location" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_gpsRecording"
            android:summary="@string/settings_gpsrecording_summary"
            android:title="@string/settings_gpsrecording_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="settings_networkLocationRecording"
            android:summary="@string/settings_networklocationrecording_summary"
            android:title="@string/settings_networklocationrecording_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_active_test"
        android:title="@string/settings_cat_active_test" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="settings_active_test_force_offline"
            android:summary="@string/settings_active_test_force_offline_summary"
            android:title="@string/settings_active_test_force_offline_title" />

        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/settings_active_test_num_iterations_dialogtitle"
            android:entries="@array/settings_active_test_num_iterations_entries"
            android:entryValues="@array/settings_active_test_num_iterations_values"
            android:key="settings_active_test_num_iterations"
            android:summary="%s"
            android:title="@string/settings_active_test_num_iterations_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="settings_active_test_sms_mo_disabled"
            android:summary="@string/settings_active_test_sms_mo_disabled_summary"
            android:title="@string/settings_active_test_sms_mo_disabled_title" />

        <EditTextPreference
            android:defaultValue="****"
            android:dependency="settings_active_test_sms_mo_disabled"
            android:key="settings_active_test_sms_mo_number"
            android:summary="@string/settings_active_test_sms_mo_number_summary"
            android:title="@string/settings_active_test_sms_mo_number_title" />
    </PreferenceCategory>

    <PreferenceScreen android:title="@string/settings_cat_debugging" >
        <PreferenceCategory
            android:key="cat_debugging"
            android:selectable="false"
            android:title="@string/settings_cat_debugging" >
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="settings_enable_devel_options"
                android:summary="@string/settings_cat_debugging_summary"
                android:title="@string/settings_enable_devel_options" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="settings_enable_devel_options"
                android:key="settings_recordUnencryptedLogfiles"
                android:summary="@string/settings_unencryptedlogfilesrecording_summary"
                android:title="@string/settings_unencryptedlogfilesrecording_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="settings_enable_devel_options"
                android:key="settings_recordUnencryptedDumpfiles"
                android:summary="@string/settings_unencrypteddumpfilesrecording_summary"
                android:title="@string/settings_unencrypteddumpfilesrecording_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="settings_enable_devel_options"
                android:key="settings_crash"
                android:summary="@string/settings_debugging_crash_summary"
                android:title="@string/settings_debugging_crash" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="settings_enable_devel_options"
                android:key="settings_debugging_dump_analysis_stacktraces"
                android:summary="@string/settings_debugging_dump_analysis_stacktraces_summary"
                android:title="@string/settings_debugging_dump_analysis_stacktraces" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:dependency="settings_enable_devel_options"
                android:key="settings_parser_logging"
                android:summary="@string/settings_debugging_parser_logging_summary"
                android:title="@string/settings_debugging_parser_logging" />
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>